overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,12 +23,18 @@
     object-fit: cover;
 
 }
-/* ================================================ */
-main {
-    background: rgb(65,59,73);
-    background: linear-gradient(0deg, rgba(65,59,73,1) 0%, rgba(0,0,0,1) 100%);
+
+body{
     width: 100vw;
     height: 100vh;
+    background: rgb(65,59,73);
+    background: linear-gradient(0deg, rgba(65,59,73,1) 0%, rgba(0,0,0,1) 100%);
+    
+}
+/* ================================================ */
+main {
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(12, 1fr);
